--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
             <configuration>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>com.asayclips.App</mainClass>
+                  <mainClass>com.asayclips.Form</mainClass>
                 </transformer>
               </transformers>
             </configuration>
